WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23923
HTMLMediaElement should implement mediaPlayerVolumeChanged
https://bugs.webkit.org/show_bug.cgi?id=23923
Summary
HTMLMediaElement should implement mediaPlayerVolumeChanged
Eric Carlson
Reported
2009-02-12 08:44:38 PST
The MediaPlayerClient interface has a mediaPlayerVolumeChanged method so a media engine can report volume changes triggered by the media engine. HTMLMediaElement implements all MediaPlayerClient methods except this.
Attachments
proposed patch
(6.53 KB, patch)
2009-02-12 09:00 PST
,
Eric Carlson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-02-12 09:00:35 PST
Created
attachment 27604
[details]
proposed patch
Simon Fraser (smfr)
Comment 2
2009-02-12 14:16:03 PST
Comment on
attachment 27604
[details]
proposed patch
> Index: WebCore/html/HTMLMediaElement.cpp > ===================================================================
> + // avoid recursion when the player reports volume changes
Sentence case.
> Index: WebCore/html/HTMLMediaElement.h > ===================================================================
> + bool processingMediaPlayerCallback() { return m_processingMediaPlayerCallback > 0; };
Make this |const|
> + void setProcessingMediaPlayerCallback(bool processing) { m_processingMediaPlayerCallback += (processing ? 1 : -1); }
To avoid the somewhat hard to read 'true', 'false' args, maybe have 2 methods (begin/end). Add an assertion to check that m_processingMediaPlayerCallback never goes negative, and make it signed.
Eric Carlson
Comment 3
2009-02-12 15:14:35 PST
Committed revision 40943.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug